--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "wa-action-bot",
-  "version": "1.0.0",
-  "description": "WhatsApp Bot on GitHub Actions",
+  "name": "vinu-roman-messager",
+  "version": "1.7.0",
+  "description": "Professional Multi-Device WhatsApp Bot",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
     "@whiskeysockets/baileys": "latest",
     "pino": "^8.0.0",
     "axios": "^1.3.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.1.0",
-    "link-preview-js": "latest"
+    "wa-sticker-formatter": "latest",
+    "ytdl-core": "latest",
+    "yt-search": "latest",
+    "google-it": "latest",
+    "translate-google-api": "latest"
   }
 }
