--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "vinu-roman-messager",
-  "version": "2.2.0",
-  "description": "Super Stable Bot",
+  "name": "vinu-roman-ai-bot",
+  "version": "2.3.0",
+  "description": "Stable WhatsApp AI Bot with Song Downloader",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "@whiskeysockets/baileys": "latest",
-    "pino": "^8.0.0",
-    "axios": "^1.3.0",
-    "fs-extra": "^11.1.0",
-    "yt-search": "latest",
-    "ytdl-core": "latest"
+    "pino": "^8.14.1",
+    "axios": "^1.4.0",
+    "fs-extra": "^11.1.1",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "latest",
+    "wa-sticker-formatter": "^4.4.4",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
